[skip ci] Added minor fixes. Updated gradle.